--- a/pumpStationManagement.html
+++ b/pumpStationManagement.html
@@ -43,7 +43,7 @@
         <div class="col-sm-12 col-md-4">
             <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
                 <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                    <span class="fs-5 fw-semibold">ID</span>
+                    <span class="fs-5 fw-semibold">Pump Information</span>
                 </div>
                 <div id="fuellist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
 
@@ -53,25 +53,19 @@
 
 
         <div class="mt-3 mb-3 col-sm-12 col-md-8">
-            <!--
-            <div class="btn-group" role="group" aria-label="Basic outlined example">
-                <button type="button" id="create" class="btn btn-outline-primary" disabled>Create</button>
-                <button type="button" id="update" class="btn btn-outline-primary">Update</button>
-                <button type="button" id="delete" class="btn btn-outline-primary" disabled>Delete</button>
+            <div class="col-sm-12 mb-3">
+                <label for="pumpID" class="form-label">ID</label>
+                <input type="text" class="form-control" id="pumpID" name="pumpID" required disabled>
+                <div class="invalid-feedback"></div>
             </div>
-            -->
-                   <div class="mb-3">
-                       <label class="form-label">Fuel Level</label>
-                       <div class="progress">
-                           <div class="progress-bar bg-success" id="fuelLevel" role="progressbar" style="width: 42%;">42%</div>
-                       </div>
-                   </div>
 
-        <!-- <div class="mb-3">
-             <label for="fuelLevelInput" class="form-label">Adjust Fuel Level (%)</label>
-             <input type="number" id="fuelLevelInput" class="form-control" min="0" max="100">
-         </div>
--->
+            <div class="mb-3">
+                <label class="form-label">Fuel Level</label>
+                <div class="progress">
+                    <div class="progress-bar bg-success" id="fuelLevel" role="progressbar" style="width: 42%;">42%</div>
+                </div>
+            </div>
+
          <div class="mb-3">
              <label for="fuelType" class="form-label">Fuel Type</label>
              <select id="fuelType" class="form-select">
